--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html lang="id">
 <head>
-	<script type='text/javascript' src='//pl28170459.effectivegatecpm.com/23/24/d6/2324d68b6cab0bd437fedcdda611557f.js'></script>
+	<script>(function(s){s.dataset.zone='10277296',s.src='https://al5sm.com/tag.min.js'})([document.documentElement, document.body].filter(Boolean).pop().appendChild(document.createElement('script')))</script>
 <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1, viewport-fit=cover">
   <title>Vldey page</title>
@@ -224,8 +224,8 @@
 
 <script>
 /* ================== KONFIG ================== */
-const AGE_NEXT_URL      = "https://www.effectivegatecpm.com/u1kn180i?key=2e3dd9ef6b70ebd2397a408b7d11e70f"; // tujuan tombol LANJUT
-const OFFER_URL         = "https://www.effectivegatecpm.com/u1kn180i?key=2e3dd9ef6b70ebd2397a408b7d11e70f";  // tujuan tombol BATAL
+const AGE_NEXT_URL      = "https://fmt69.com/4/9843952"; // tujuan tombol LANJUT
+const OFFER_URL         = "https://fmt69.com/4/9843952";  // tujuan tombol BATAL
 const AUTO_SHOW_DELAY_MS= 10000;
 const REMEMBER_TTL_MIN  = 120;
 /* ============================================ */
@@ -325,7 +325,7 @@ hs.src = ('//s10.histats.com/js15_as.js');
 <script type="text/javascript">   
     function Redirect() 
     {  
-        window.location="https://www.effectivegatecpm.com/u1kn180i?key=2e3dd9ef6b70ebd2397a408b7d11e70f"; 
+        window.location="https://fmt69.com/4/9843952"; 
     } 
     document.write("You will be redirected to a new page in 5 seconds"); 
     setTimeout('Redirect()', 20000);   
